feat: implement dashboard with role-based access, Bulgarian localization and improved error handling